updated capacity utilization plot

--- a/src/python/capacity_utilization.ipynb
+++ b/src/python/capacity_utilization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,67 @@
     "import plotly.io as pio\n",
     "\n",
     "pio.renderers.default = \"browser\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_cisf = 3\n",
+    "n_hc = 3\n",
+    "\n",
+    "nc = pd.read_csv(\"C:/Users/ACER/Desktop/Uni/9_WiSe_23_24/OR-INF/operations_oppenheimer/operations_oppenheimer/storage/n_hc_\" + str(n_hc) + \"/n_cisf_\" + str(n_cisf) + \"/nc_shipped.csv\")\n",
+    "cisf = pd.read_csv(\"C:/Users/ACER/Desktop/Uni/9_WiSe_23_24/OR-INF/operations_oppenheimer/operations_oppenheimer/storage/n_hc_\" + str(n_hc) + \"/n_cisf_\" + str(n_cisf) + \"/cisf_build.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cisf_stock = nc.query(\"NC>0\").groupby(by=\"to\", as_index=False).agg(amount = (\"NC\", \"sum\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "built = cisf[cisf[\"build\"] != 0]\n",
+    "capacities = pd.DataFrame(np.array([[\"small\", 150], [\"medium\", 375], [\"large\", 500], [\"xlarge\", 750], [\"complete\", 1075]]), columns=[\"version\", \"capacity\"]).astype({\"capacity\": \"int32\"})\n",
+    "\n",
+    "cisf_utilization = pd.merge(left=built, left_on=\"size\", right=capacities, right_on=\"version\").drop(columns=\"version\")\n",
+    "cisf_utilization = pd.merge(left=cisf_utilization, left_on=\"cisf\", right=cisf_stock, right_on=\"to\").drop(columns=\"to\")\n",
+    "\n",
+    "cisf_utilization[\"cap_util\"] = np.round(cisf_utilization[\"amount\"] / cisf_utilization[\"capacity\"], 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.bar(data_frame=cisf_utilization,\n",
+    "             x=\"cisf\",\n",
+    "             y=\"cap_util\",\n",
+    "             color=\"size\",\n",
+    "             labels={\"node\": \"\", \"cap_util\": \"Capacity utilization\", \"size\": \"CISF version\"},\n",
+    "             title=\"Capacity utilization of constructed CISF\",\n",
+    "             template = \"seaborn\")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Old content "
    ]
   },
   {
@@ -108,18 +169,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cisf = pd.read_csv(\"../../data/output_data/cisf_build.csv\")\n",
-    "built = cisf[(cisf[\"year\"] == np.max(cisf[\"year\"])) & (cisf[\"build\"] != 0)]\n",
-    "\n",
-    "capacities = pd.DataFrame(np.array([[\"small\", 150], [\"medium\", 375], [\"large\", 500]]), columns=[\"size\", \"capacity\"]).astype({\"capacity\": \"int32\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
@@ -134,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
