added sensitive analysis

--- a/src/python/capacity_utilization.ipynb
+++ b/src/python/capacity_utilization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,12 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_cisf = 3\n",
-    "n_hc = 3\n",
+    "n_cisf = \"nothing\"\n",
+    "n_hc = \"nothing\"\n",
     "\n",
     "nc = pd.read_csv(\"C:/Users/ACER/Desktop/Uni/9_WiSe_23_24/OR-INF/operations_oppenheimer/operations_oppenheimer/storage/n_hc_\" + str(n_hc) + \"/n_cisf_\" + str(n_cisf) + \"/nc_shipped.csv\")\n",
     "cisf = pd.read_csv(\"C:/Users/ACER/Desktop/Uni/9_WiSe_23_24/OR-INF/operations_oppenheimer/operations_oppenheimer/storage/n_hc_\" + str(n_hc) + \"/n_cisf_\" + str(n_cisf) + \"/cisf_build.csv\")"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -114,15 +114,40 @@
          "textposition": "auto",
          "type": "bar",
          "x": [
-          "Lüneburg",
-          "Alzey-Worms",
-          "Stuttgart"
+          "Lüchow-Dannenberg",
+          "Rhein-Pfalz-Kreis",
+          "Schwaben"
          ],
          "xaxis": "x",
          "y": [
-          1,
-          0.89,
-          0.98
+          0.94,
+          0.97,
+          0.57
+         ],
+         "yaxis": "y"
+        },
+        {
+         "alignmentgroup": "True",
+         "hovertemplate": "CISF version=small<br>cisf=%{x}<br>Capacity utilization=%{y}<extra></extra>",
+         "legendgroup": "small",
+         "marker": {
+          "color": "rgb(221,132,82)",
+          "pattern": {
+           "shape": ""
+          }
+         },
+         "name": "small",
+         "offsetgroup": "small",
+         "orientation": "v",
+         "showlegend": true,
+         "textposition": "auto",
+         "type": "bar",
+         "x": [
+          "Grafschaft Bentheim"
+         ],
+         "xaxis": "x",
+         "y": [
+          0.95
          ],
          "yaxis": "y"
         }
@@ -134,6 +159,9 @@
           "text": "CISF version"
          },
          "tracegroupgap": 0
+        },
+        "margin": {
+         "t": 60
         },
         "template": {
          "data": {
@@ -1191,9 +1219,7 @@
           }
          }
         },
-        "title": {
-         "text": "Capacity utilization of constructed CISF"
-        },
+        "width": 800,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -1227,8 +1253,8 @@
     "             y=\"cap_util\",\n",
     "             color=\"size\",\n",
     "             labels={\"node\": \"\", \"cap_util\": \"Capacity utilization\", \"size\": \"CISF version\"},\n",
-    "             title=\"Capacity utilization of constructed CISF\",\n",
-    "             template = \"seaborn\")\n",
+    "             template = \"seaborn\",\n",
+    "             width=800)\n",
     "\n",
     "fig.show()"
    ]
